# zendesk-mcp-server

./: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
docs/: VIEWS_AND_CUSTOM_FIELDS.md
src/zendesk_mcp_server/: server.py  zendesk_client.py
tests/: test_search_tickets.py
